--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 
 <html>
     <head>
-        
+        <title>Take your blood</title>
     </head>
     <body>
+        <h1>DOE</h1>
+        <h2>A sua importação importa</h2>
+        <p>Até 3 vidas com uma doação</p>
+        <p>Mais de 30,000 doações são necessárias tods os dias</p>
+        <p>Apenas 1,9% da população brasileira, doa sangue.</p>
+
+        <button>Quero ajudar</button>
         
     </body>
 </html>
