--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <title>Take your blood</title>
-    </head>
-    <body>
+
+<head>
+    <title>Take your blood</title>
+</head>
+
+<body>
+    <header>
         <h1>DOE</h1>
         <h2>A sua importação importa</h2>
         <p>Até 3 vidas com uma doação</p>
@@ -12,6 +15,45 @@
         <p>Apenas 1,9% da população brasileira, doa sangue.</p>
 
         <button>Quero ajudar</button>
-        
-    </body>
+    </header>
+
+    <section class="form"></section>
+    <h2>Entre na lista de doadores</h2>
+    <form action="/">
+        <input type="text" name="name" type="text" placeholder="Nome Completo">
+        <input type="text" name="name" type="text" placeholder="E-mail">
+        <input type="text" name="name" type="text" placeholder="Tipo sanguíneo">
+
+        <button>Quero ajudar</button>
+    </form>
+
+    <main>
+        <h2>Útimos doadores</h2>
+
+        <section class="donors">
+            <div class="donor">
+                <div class="blood">AB+</div>
+                <p>Pedro Henrique</p>
+
+            </div>
+            <div class="donor">
+                <div class="blood">B+</div>
+                <p>Isabella Rodrigues</p>
+
+            </div>
+            <div class="donor">
+                <div class="blood">A+</div>
+                <p>Ronaldo da Silva</p>
+
+            </div>
+            <div class="donor">
+                <div class="blood">O+</div>
+                <p>Lucas Montero </p>
+
+            </div>
+        </section>
+    </main>
+
+</body>
+
 </html>
