--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 
 <head>
     <title>Take your blood</title>
+    <style>
+        body {
+            color: red;
+            background-color: yellow;
+        }
+    </style>
 </head>
 
 <body>
