--- a/index.html
+++ b/index.html
@@ -4,12 +4,8 @@
 
 <head>
     <title>Take your blood</title>
-    <style>
-        body {
-            color: red;
-            background-color: yellow;
-        }
-    </style>
+
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -23,15 +19,16 @@
         <button>Quero ajudar</button>
     </header>
 
-    <section class="form"></section>
-    <h2>Entre na lista de doadores</h2>
-    <form action="/">
-        <input type="text" name="name" type="text" placeholder="Nome Completo">
-        <input type="text" name="name" type="text" placeholder="E-mail">
-        <input type="text" name="name" type="text" placeholder="Tipo sanguíneo">
+    <section class="form">
+        <h2>Entre na lista de doadores</h2>
+        <form action="/">
+            <input type="text" name="name" type="text" placeholder="Nome Completo">
+            <input type="text" name="name" type="text" placeholder="E-mail">
+            <input type="text" name="name" type="text" placeholder="Tipo sanguíneo">
 
-        <button>Quero ajudar</button>
-    </form>
+            <button>Quero ajudar</button>
+        </form>
+    </section>
 
     <main>
         <h2>Útimos doadores</h2>
