--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     <title>Take your blood</title>
 
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header>
-        <h1>DOE</h1>
-        <h2>A sua importação importa</h2>
-        <p>Até 3 vidas com uma doação</p>
-        <p>Mais de 30,000 doações são necessárias tods os dias</p>
-        <p>Apenas 1,9% da população brasileira, doa sangue.</p>
+        <img src="logo.png" class="logo" alt="logo doe">
+        <h2>A sua doação importa.</h2>
+        <p>Até 3 vidas com uma doação.</p>
+        <p>Mais de 30,000 doações são necessárias tods os dias.</p>
+        <p>Apenas 1,9% da população brasileira doa sangue.</p>
 
         <button>Quero ajudar</button>
     </header>
@@ -31,7 +32,7 @@
     </section>
 
     <main>
-        <h2>Útimos doadores</h2>
+        <h2>Útimos <span>doadores</span></h2>
 
         <section class="donors">
             <div class="donor">
@@ -54,8 +55,11 @@
                 <p>Lucas Montero </p>
 
             </div>
+
         </section>
     </main>
+
+    <footer>Com ❤️ Falcão</footer>
 
 </body>
 
