--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <button>Quero ajudar</button>
     </header>
 
-    <section class="form">
+    <section class="form hide">
         <h2>Entre na lista de doadores</h2>
         <form action="/">
             <input type="text" name="name" type="text" placeholder="Nome Completo">
@@ -62,5 +62,6 @@
     <footer>Com ❤️ Falcão</footer>
 
 </body>
+<script src="script.js"></script>
 
 </html>
